--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-fileupload": "^1.1.7-alpha.3",
     "pg": "^8.2.1"
   },
   "devDependencies": {
