--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "ejs-lint": "^1.1.0",
+    "express": "^4.17.1",
     "pg": "^8.2.1"
   },
   "devDependencies": {
