--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-fileupload": "^1.1.7-alpha.3",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "xlsx": "^0.16.2"
   },
   "devDependencies": {
     "got": "^11.3.0",
