--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.5.6",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "mongoose": "^5.9.20",
     "pg": "^8.2.1",
+    "request": "^2.88.2",
     "xlsx": "^0.16.2"
   },
   "devDependencies": {
