--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^2.5.6",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
-    "pg": "^8.2.1",
+    "mongodb": "^3.5.9",
     "xlsx": "^0.16.2"
   },
   "devDependencies": {
