--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^2.5.6",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
