--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "https": "^1.0.0",
     "mongoose": "^5.9.20",
     "pg": "^8.2.1",
     "request": "^2.88.2",
