--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "mongoose": "^5.9.20",
     "pg": "^8.2.1",
+    "puppeteer": "^4.0.1",
     "request": "^2.88.2",
     "xlsx": "^0.16.2"
   },
