--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.2.1",
     "puppeteer": "^4.0.1",
     "request": "^2.88.2",
+    "telegrambot": "^0.1.0",
     "xlsx": "^0.16.2"
   },
   "devDependencies": {
