--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "pg": "^8.2.1",
     "puppeteer": "^4.0.1",
     "request": "^2.88.2",
-    "sync-request": "^6.1.0",
+    "request-promise": "^4.2.5",
     "telegrambot": "^0.1.0",
     "xlsx": "^0.16.2"
   },
